# 8-puzzle-solver-with-a-star

./: README.md  pyproject.toml  run.sh
project1-astar/: puzzle.py
src/: main.py  puzzle.py
tests/: test_puzzle.py
