[tool.poetry]
name = "project1-astar"
version = "0.1.0"
description = ""
authors = ["domnu-raul <sir.c4ppuccin0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytest = "pytest:main"
